--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "react": "^19",
         "react-dom": "^19",
         "react-redux": "^9.2.0",
-        "redux": "^5.0.1"
+        "redux": "^5.0.1",
+        "uuid": "^11.0.5"
     },
     "devDependencies": {
         "@types/node": "^20",
